# graphics-engine

./: CMakeLists.txt  README.md  build.py  project
common/: README.md
common/objects/: dagger.mtl
include/: Camera.hpp  Error.hpp  EventModel.h  Geometry.hpp  Image.hpp  Light.hpp  OBJModel.hpp  Object.hpp  ObjectManager.hpp  Renderer.hpp  SDLGraphicsProgram.hpp  SceneNode.hpp  SceneTree.hpp  Shader.hpp  Sphere.hpp  Terrain.hpp  Texture.hpp  Transform.hpp  VertexBufferLayout.hpp
include/Objects/: Cube.hpp  Image.hpp  Object.hpp  Sphere.hpp  Terrain.hpp  Texture.hpp  VertexBufferLayout.hpp
include/Scene/: Camera.hpp  Renderer.hpp  SceneNode.hpp  SceneTree.hpp  Shader.hpp  Transform.hpp
objects/base_surface/: base_surface.mtl
objects/platform_one/: platform_one.mtl
shaders/: depthmap.glsl  frag.glsl  vert.glsl
src/: Camera.cpp  Cube.cpp  Geometry.cpp  Image.cpp  Light.cpp  OBJModel.cpp  Object.cpp  ObjectManager.cpp  Renderer.cpp  SDLGraphicsProgram.cpp  SceneNode.cpp  SceneTree.cpp  Shader.cpp  Sphere.cpp  Terrain.cpp  Texture.cpp  Transform.cpp  VertexBufferLayout.cpp  main.cpp
src/Objects/: Cube.cpp  Geometry.cpp  Image.cpp  OBJModel.cpp  Object.cpp  Sphere.cpp  Terrain.cpp  Texture.cpp  VertexBufferLayout.cpp
src/Rendering/: Camera.cpp  Renderer.cpp  Shader.cpp
src/Scene/: Camera.cpp  Light.cpp  Renderer.cpp  SceneNode.cpp  SceneTree.cpp  Shader.cpp  Transform.cpp
